# ML-Watch

./: README.md  pyproject.toml
mlwatch/: __init__.py
mlwatch/alerts/: __init__.py  alerter.py
mlwatch/cloud/: __init__.py  aws.py  azure.py  base.py  gcp.py  local.py
mlwatch/core/: __init__.py  decorators.py  metrics.py  monitor.py  session.py
mlwatch/drift/: __init__.py  data_drift.py  ood.py  pred_drift.py
mlwatch/frameworks/: __init__.py  base.py  pytorch.py  sklearn.py  tensorflow.py
mlwatch/utils/: __init__.py  serialization.py  stats.py
tests/: __init__.py
tests/unit/: __init__.py  test_data_drift.py  test_monitor.py  test_ood.py  test_serialization.py  test_stats.py
