[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlwatch"
version = "0.1.0"
description = "A framework-agnostic ML monitoring SDK tailored for production cloud environments."
readme = "README.md"
authors = [
    { name = "ML Platform Team", email = "platform@example.com" }
]
license = "Apache-2.0"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "httpx>=0.24.0"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.optional-dependencies]
aws = [
    "boto3>=1.26.0"
]
gcp = [
    "google-cloud-monitoring>=2.0.0",
    "google-auth>=2.0.0"
]
azure = [
    "azure-monitor-ingestion>=1.0.0",
    "azure-identity>=1.0.0"
]
all = [
    "boto3>=1.26.0",
    "google-cloud-monitoring>=2.0.0",
    "google-auth>=2.0.0",
    "azure-monitor-ingestion>=1.0.0",
    "azure-identity>=1.0.0"
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "torch>=2.0.0",
    "tensorflow>=2.10.0"
]

[project.urls]
Homepage = "https://github.com/Aamod007/ML-Watch"
Repository = "https://github.com/Aamod007/ML-Watch.git"
